Add more API tests:
 * Create empty ClaimPermissions
 * Create ClaimPermissions with rules
 * Create ClaimPermissions that uses existing rulesets
 * Create empty ClaimPermissions, then add rules to it

Turns out the OpenAPI spec didn't actually support some of these scenarios: creating a ClaimPermissions that refers to an existing rulesets didn't work because we need to pass in a ruleset that just has the ID, but the OpenAPI spec required that the thing be fully populated (which you're not actually allowed to when creating a new ClaimPermissions)
